# nekono-pipewire-mcp

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
src/nekono_pipewire_mcp/: __init__.py  server.py
tests/: test_parse_status.py
tests/fixtures/: wpctl-status-sample.txt
