[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nekono-pipewire-mcp"
version = "0.1.0"
description = "MCP server exposing PipeWire / wireplumber controls (wpctl wrapper) to Claude"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Nekono Nana KAKKO KARI", email = "3267314+nananek@users.noreply.github.com" },
]
keywords = ["mcp", "model-context-protocol", "pipewire", "wireplumber", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/nananek/nekono-pipewire-mcp"
Issues = "https://github.com/nananek/nekono-pipewire-mcp/issues"

[project.scripts]
nekono-pipewire-mcp = "nekono_pipewire_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nekono_pipewire_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
